--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="no-js">
 
-  {% include head.html %}
+  {% include base/head.html %}
 
   <body>
 
-    {% include header.html %}
+    {% include navigation/primary-nav.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+		<div id="sb-site">
+			{% include header.html %}
+			{{ content }}
+		</div>
 
-    {% include footer.html %}
+    {% include base/footer-scripts.html %}
+    {% include base/analytics.html %}
 
   </body>
-
 </html>
+
