--- a/css/main.scss
+++ b/css/main.scss
@@ -1,52 +1,23 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
+# Front matter comment to ensure Jekyll properly reads file.
 ---
-@charset "utf-8";
 
+  @import "base/_variables";    // Global Variables
+  @import "base/_mixins";       // Base Mixins
+  @import "base/_resets";       // General Resets
+  @import "base/_helpers";      // Custom Base Helpers
+  @import "base/_grid";         // Grid
+  @import "base/_global";       // Global Typography and Headings
+  @import "base/_lists";        // Unordered Lists, Ordered Lists and Navigation
+  @import "base/_blockquotes";  // Blockquotes
+  @import "base/_code";         // Code
+  @import "base/_tables";       // Tables
+  @import "base/_forms";        // Forms, Input Types and Buttons
+  @import "base/_buttons";      // Custom Base Buttons
+  @import "base/_tablet-grid";  // Tablet Grid
+  @import "base/_mobile-grid";  // Mobile Grid
+  @import "base/_print";        // Print Page Styles
 
+  @import "base/_mobile-first-config";        // Custom - setup for mobile first
 
-// Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
-
-$spacing-unit:     30px;
-
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
-
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
-
-// Width of the content area
-$content-width:    800px;
-
-$on-palm:          600px;
-$on-laptop:        800px;
-
-
-
-// Using media queries with like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
-}
-
-
-
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+  @import "libs/slidebars.min"      // Slidebars plugin
