--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,7 @@
 	  <div class="col col-12 tablet-full mobile-full">
 			
 			<div class="logo">
-				<img src="images/Infinity-Loop@2x.png" width="50" height="50" alt="">
-				<p>Hajime Hiro</p>
+				<p class="ir">Hajime Hiro</p>
 			</div>
 			
 			<div class="primary-nav-toggle sb-toggle-right no-desktop no-tablet show-mobile">
