--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
-<header>
+<header class="header">
   <div class="row clear">
 	  <div class="col col-12 tablet-full mobile-full">
 			
-			<div class="logo">
+			<div class="header__logo">
 				<p class="ir">Hajime Hiro</p>
 			</div>
 			
-			<div class="primary-nav-toggle sb-toggle-right no-desktop no-tablet show-mobile">
+			<div class="header__nav-toggle sb-toggle-right no-desktop no-tablet show-mobile">
 			</div>
 
 	  </div>
