--- a/_includes/modules/feature-grid.html
+++ b/_includes/modules/feature-grid.html
@@ -1,48 +1,67 @@
-<div class="mod-feature-grid">
+<div class="feature-grid">
 
-  <div class="row clear top-row">
-    <div class="col col-4 tablet-col-4 mobile-full">
-      <span>1</span>
-    </div>
-    <div class="col col-4 tablet-col-4 mobile-full hfx-item">
-      <figure class="effect-oscar">
-        <img src="http://tympanus.net/Development/HoverEffectIdeas/img/9.jpg" alt="img09"/>
+  <div class="row clear feature-grid__row feature-grid__row--first">
+    <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel">
+      <figure class="effect-romeo feature-grid__effect-panel--mustard">
+        <img src="http://lorempixel.com/output/sports-q-g-480-360-10.jpg" alt="img09"/>
         <figcaption>
           <h2>Suits &amp <span>Gi's</span></h2>
           <p>Oscar is a decent man. He used to clean porches with pleasure.</p>
           <a href="#">View more</a>
         </figcaption>     
       </figure>
+      <span class="tool-kit__panel-arrow tool-kit__panel-arrow--left tool-kit__panel-arrow--bottom tool-kit__panel-arrow--hide-mobile"></span>
     </div>
-    <div class="col col-4 tablet-col-4 mobile-full">
-      <span>3</span>
+    <div class="col col-4 tablet-col-4 mobile-full feature-grid__panel feature-grid__panel--intro">
+      <span>This will be an intro</span>
     </div>
-  </div>
-
-  <div class="row clear">
-    <div class="col col-4 tablet-col-4 mobile-full hfx-item">
-      <figure class="effect-oscar">
-        <img src="http://tympanus.net/Development/HoverEffectIdeas/img/9.jpg" alt="img09"/>
+    <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel">
+      <figure class="effect-romeo feature-grid__effect-panel--red">
+        <img src="http://lorempixel.com/output/sports-q-g-480-360-6.jpg" alt="img09"/>
         <figcaption>
           <h2>Our <span>Belts</span></h2>
           <p>Oscar is a decent man. He used to clean porches with pleasure.</p>
           <a href="#">View more</a>
         </figcaption>     
       </figure>
+      <span class="tool-kit__panel-arrow tool-kit__panel-arrow--right tool-kit__panel-arrow--bottom tool-kit__panel-arrow--hide-mobile"></span>
     </div>
-    <div class="col col-4 tablet-col-4 mobile-full">
-      <span>3</span>
+  </div>
+
+  <div class="row clear feature-grid__row">
+    <div class="col col-4 tablet-col-4 mobile-full feature-grid__panel">
+      &nbsp;
     </div>
-    <div class="col col-4 tablet-col-4 mobile-full hfx-item">
-      <figure class="effect-oscar">
-        <img src="http://tympanus.net/Development/HoverEffectIdeas/img/9.jpg" alt="img09"/>
+    <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel">
+      <figure class="effect-romeo feature-grid__effect-panel--blue">
+        <img src="http://lorempixel.com/output/sports-q-g-480-360-8.jpg" alt="img09"/>
         <figcaption>
           <h2>Practise <span>Pads</span></h2>
           <p>Oscar is a decent man. He used to clean porches with pleasure.</p>
           <a href="#">View more</a>
         </figcaption>     
       </figure>
+      <span class="tool-kit__panel-arrow tool-kit__panel-arrow--down tool-kit__panel-arrow--hide-mobile"></span>
     </div>
-  </div>  
+    <div class="col col-4 tablet-col-4 mobile-full feature-grid__panel">
+      &nbsp;
+    </div>
+  </div>
+
+  <div class="col col-12 tablet-col-12 mobile-full">
+    
+    <a href="#">View shop</a>
+
+  </div>
+
+  <div class="row clear feature-grid__row">
+    <div class="col col-8 tablet-col-8 mobile-full feature-grid__panel feature-grid__panel--static-image">
+      <img src="http://lorempixel.com/output/sports-q-g-960-360-1.jpg" alt="">
+      <span class="tool-kit__panel-arrow tool-kit__panel-arrow--left tool-kit__panel-arrow--top tool-kit__panel-arrow--hide-mobile"></span>
+    </div>
+    <div class="col col-4 tablet-col-4 mobile-full feature-grid__panel">
+      &nbsp;
+    </div>
+  </div>
 
 </div>
