--- a/_includes/navigation/primary-nav.html
+++ b/_includes/navigation/primary-nav.html
@@ -1,9 +1,9 @@
 <div class="sb-slidebar sb-right">
 	<nav class="primary-nav">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="/about/">About</a></li>
-      <li><a href="/blog/">Blog</a></li>
-    </ul>
-  </nav>
+		<ul>
+			  <li class="primary-nav__item"><a href="index.html">Shop</a></li>
+			  <li class="primary-nav__item"><a href="/about/">Blog</a></li>
+			  <li class="primary-nav__item primary-nav__item--last"><a href="/blog/">Contact</a></li>
+		</ul>
+	</nav>
 </div>
