--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,9 @@
 
 		<div id="sb-site">
 			{% include header.html %}
-			{{ content }}
+      <div class="wrapper-main">
+        {{ content }}
+      </div>
 		</div>
 
     {% include base/footer-scripts.html %}
