--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -2,6 +2,28 @@
 // Base – Global Variables
 // ==========================================================================
 
+////
+// Colours
+////
+
+$wrapper-main-bg: 	#f1f1f1;
+
+$mustard: 			#A69021;
+$red:				#8C141E;
+$blue:				#B4C8D9;
+
+
+
+////
+// Dimensions
+////
+
+$main-gutter-width:	50px;
+
+////
+// Below are Base framework variables
+////
+
 // Container Defaults
 $mobile-container:   100%;
 $tablet-container:   720px;
