--- a/_sass/modules/feature-grid/_mobile.scss
+++ b/_sass/modules/feature-grid/_mobile.scss
@@ -1,13 +1,48 @@
 // Dependancy on _hover-effects.scss
 
-.mod-feature-grid {
+.feature-grid {
 	
-	.row, .col {
+	&__row, &__panel {
 		padding:0;
 	}
 
-	.top-row {
-		//background-color: #EF9A9A;
+	&__row {
+
+		&--first {
+			position: relative;
+			padding-top: 100px;
+		}
+	}
+
+	&__panel {
+		position: relative;
+
+		&--intro {
+			position: absolute;
+			top:0px;
+		}
+
+		&--static-image {
+			img {
+				width: 100%;
+			}
+		}
+	}
+
+	&__effect-panel {
+
+		&--mustard {
+			background-color: $mustard;
+		}
+
+		&--red {
+			background-color: $red;
+		}
+
+		&--blue {
+			background-color: $blue;
+		}
+
 	}
 
 }
