Homepage feature panel styles

--- a/_includes/modules/feature-grid.html
+++ b/_includes/modules/feature-grid.html
@@ -1,31 +1,33 @@
 <div class="feature-grid">
 
   <div class="row clear feature-grid__row feature-grid__row--first">
+    
     <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel">
-      <figure class="effect-romeo feature-grid__effect-panel--mustard">
-        <img src="http://lorempixel.com/output/sports-q-g-480-360-10.jpg" alt="img09"/>
+      <figure class="effect-romeo feature-grid__effect-panel feature-grid__effect-panel--mustard">
+        <img src="/images/placeholder/suits_480_360.jpg" alt="img09"/>
         <figcaption>
-          <h2>Suits &amp <span>Gi's</span></h2>
-          <p>Oscar is a decent man. He used to clean porches with pleasure.</p>
+          <h2><span>Suits</span></h2>
           <a href="#">View more</a>
         </figcaption>     
       </figure>
-      <span class="tool-kit__panel-arrow tool-kit__panel-arrow--left tool-kit__panel-arrow--bottom tool-kit__panel-arrow--hide-mobile"></span>
     </div>
+    
     <div class="col col-4 tablet-col-4 mobile-full feature-grid__panel feature-grid__panel--intro">
-      <span>This will be an intro</span>
+      <div class="feature-grid__intro-header">
+        <h3>Our&nbsp;Products</h3>
+      </div>  
     </div>
+    
     <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel">
-      <figure class="effect-romeo feature-grid__effect-panel--red">
-        <img src="http://lorempixel.com/output/sports-q-g-480-360-6.jpg" alt="img09"/>
+      <figure class="effect-romeo feature-grid__effect-panel feature-grid__effect-panel--red">
+        <img src="/images/placeholder/belts_480_360.jpg" alt="img09"/>
         <figcaption>
-          <h2>Our <span>Belts</span></h2>
-          <p>Oscar is a decent man. He used to clean porches with pleasure.</p>
+          <h2><span>Belts</span></h2>
           <a href="#">View more</a>
         </figcaption>     
       </figure>
-      <span class="tool-kit__panel-arrow tool-kit__panel-arrow--right tool-kit__panel-arrow--bottom tool-kit__panel-arrow--hide-mobile"></span>
     </div>
+  
   </div>
 
   <div class="row clear feature-grid__row">
@@ -33,15 +35,13 @@
       &nbsp;
     </div>
     <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel">
-      <figure class="effect-romeo feature-grid__effect-panel--blue">
-        <img src="http://lorempixel.com/output/sports-q-g-480-360-8.jpg" alt="img09"/>
+      <figure class="effect-romeo feature-grid__effect-panel feature-grid__effect-panel--blue">
+        <img src="/images/placeholder/supplements_480_360.jpg" alt="img09"/>
         <figcaption>
-          <h2>Practise <span>Pads</span></h2>
-          <p>Oscar is a decent man. He used to clean porches with pleasure.</p>
+          <h2><span>Supplements</span></h2>
           <a href="#">View more</a>
         </figcaption>     
       </figure>
-      <span class="tool-kit__panel-arrow tool-kit__panel-arrow--down tool-kit__panel-arrow--hide-mobile"></span>
     </div>
     <div class="col col-4 tablet-col-4 mobile-full feature-grid__panel">
       &nbsp;
