--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -6,13 +6,12 @@
 // Colours
 ////
 
-$wrapper-main-bg: 	#f1f1f1;
+$bleed:							#f1f1f1;
+$wrapper-main-bg: 	#fff;
 
-$mustard: 			#A69021;
-$red:				#8C141E;
-$blue:				#B4C8D9;
-
-
+$mustard: 					#A69021;
+$red:								#8C141E;
+$blue:							#7AA1C8;
 
 ////
 // Dimensions
