--- a/_sass/modules/tool-kit/_mobile.scss
+++ b/_sass/modules/tool-kit/_mobile.scss
@@ -1,8 +1,26 @@
-.tool-kit {
+.tk {
+
+	&__bleed-arrow {
+
+		$arrow-size: 40px;
+
+		width: 0; 
+		height: 0; 
+		position: absolute;
+
+		&--down {
+			border-left: $arrow-size solid transparent;
+			border-right: $arrow-size solid transparent;
+			border-top: $arrow-size solid $bleed;
+			bottom: -39px;
+			left: 47%;
+		}
+
+	}
 
 	&__panel-arrow {
 
-		$arrow-size: 30px;
+		$arrow-size: 15px;
 
 		width: 0; 
 		height: 0; 
