--- a/_includes/modules/home/feature-grid.html
+++ b/_includes/modules/home/feature-grid.html
@@ -2,11 +2,11 @@
 
   <div class="row clear feature-grid__row feature-grid__row--first">
     
-    <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel">
-      <figure class="effect-romeo feature-grid__effect-panel feature-grid__effect-panel--mustard">
-        <img src="/images/placeholder/suits_480_360.jpg" alt="img09"/>
+    <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel feature-grid__panel--product feature-grid__panel--alpha">
+      <figure class="effect-romeo">
+        <img src="/images/placeholder/suits_480_360.jpg" />
         <figcaption>
-          <h2><span>Suits</span></h2>
+          <h2 class="banner">Suits</h2>
           <a href="#">View more</a>
         </figcaption>     
       </figure>
@@ -14,15 +14,15 @@
     
     <div class="col col-4 tablet-col-4 mobile-full feature-grid__panel feature-grid__panel--intro">
       <div class="feature-grid__intro-header">
-        <h3>Our&nbsp;Products</h3>
+        <h3 class="banner">Our&nbsp;Products</h3>
       </div>  
     </div>
     
-    <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel">
-      <figure class="effect-romeo feature-grid__effect-panel feature-grid__effect-panel--red">
-        <img src="/images/placeholder/belts_480_360.jpg" alt="img09"/>
+    <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel feature-grid__panel--product feature-grid__panel--beta">
+      <figure class="effect-romeo">
+        <img src="/images/placeholder/belts_480_360.jpg" />
         <figcaption>
-          <h2><span>Belts</span></h2>
+          <h2 class="banner">Belts</h2>
           <a href="#">View more</a>
         </figcaption>     
       </figure>
@@ -34,11 +34,11 @@
     <div class="col col-4 tablet-col-4 mobile-full feature-grid__panel">
       &nbsp;
     </div>
-    <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel">
-      <figure class="effect-romeo feature-grid__effect-panel feature-grid__effect-panel--blue">
-        <img src="/images/placeholder/supplements_480_360.jpg" alt="img09"/>
+    <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel feature-grid__panel--product feature-grid__panel--delta">
+      <figure class="effect-romeo">
+        <img src="/images/placeholder/supplements_480_360.jpg" />
         <figcaption>
-          <h2><span>Supplements</span></h2>
+          <h2 class="banner">Supplements</h2>
           <a href="#">View more</a>
         </figcaption>     
       </figure>
