--- a/_includes/modules/home/welcome-strip.html
+++ b/_includes/modules/home/welcome-strip.html
@@ -4,6 +4,6 @@
 		<span>A martial arts store for the truly heroic...</span>
 	</div>
 
-	<span class="tk__bleed-arrow tk__bleed-arrow--down"></span>
+	<span class="tk__arrow tk__arrow--bleed tk__arrow--bleed--down"></span>
 
 </div>
