--- a/_sass/_tablet-styles.scss
+++ b/_sass/_tablet-styles.scss
@@ -1,4 +1,4 @@
 .wrapper-main {
-	margin: 0 $main-gutter-width;
-	background-color: $wrapper-main-bg;
+	margin: 0 $L-gutter-width;
+	background-color: $C-layout-white;
 }
