--- a/_sass/modules/home/welcome-strip/_mobile.scss
+++ b/_sass/modules/home/welcome-strip/_mobile.scss
@@ -1,14 +1,13 @@
 .welcome-strip {
 
-	background-color: $bleed;
+	background-color: $C-layout-bleed;
 	padding: 36px 0;
 	text-align: center;
-	font-size: 28px;
+	font-size: $FS-beech;
 	position: relative;
 
 	&__message {
-
-		font-family: 'Open Sans', sans-serif;
+		font-family: $F-windward;
 	}
 
 }
