--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,7 @@
   @import "base/_print";          // Print Page Styles
   @import "base/_hover-effects";  // Hover effects
 
+  @import "base/_sprite-config";
   @import "base/_main-config";
   @import "base/_module-config";
 
