--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -10,7 +10,8 @@ $C-brand-blue:		#7AA1C8;
 $L-gutter-width:	50px;
 
 // Font Sizes
-$FS-beech:				28px;
+$FS-beech-a:				20px;
+$FS-beech-b:				28px;
 
 // Fonts
 $F-windward: 'Open Sans', sans-serif;
