--- a/_sass/modules/tool-kit/_mobile.scss
+++ b/_sass/modules/tool-kit/_mobile.scss
@@ -15,7 +15,8 @@
 				border-right: $D-arrow-base solid transparent;
 				border-top: $D-arrow-base solid $C-layout-bleed;
 				bottom: -39px;
-				left: 47%;
+				left: 50%;
+				margin-left: -40px;
 			}
 		}
 
