--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,7 @@
   @import "base/_hover-effects";  // Hover effects
 
   @import "base/_sprite-config";
+  @import "base/_svg-icons";
   @import "base/_main-config";
   @import "base/_module-config";
 
