--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
 			</div>
 			
 			<div class="header__nav-toggle sb-toggle-right no-desktop no-tablet show-mobile">
+				<span class="si-icon si-icon-hamburger-cross" data-icon-name="hamburgerCross"></span>
 			</div>
 
 	  </div>
