--- a/_sass/modules/home/welcome-strip/_mobile.scss
+++ b/_sass/modules/home/welcome-strip/_mobile.scss
@@ -3,7 +3,7 @@
 	background-color: $C-layout-bleed;
 	padding: 36px 0;
 	text-align: center;
-	font-size: $FS-beech;
+	font-size: $FS-beech-a;
 	position: relative;
 
 	&__message {
