--- a/_sass/modules/primary-nav-bar/_mobile.scss
+++ b/_sass/modules/primary-nav-bar/_mobile.scss
@@ -3,7 +3,7 @@
 	background-color: $C-layout-white;
 
 	.col {
-		padding: 0;
+		padding: 0 15px;
 	}
 
 	.row {
@@ -26,9 +26,9 @@
 
 	&__nav-toggle {
 		float: right;
-		width:60px;
-		height:60px;
-		background-color:red;
+		width: 40px;
+		height: 40px;
+		margin-top: 15px;
 	}
 
 }
