--- a/_sass/base/_sprite-config.scss
+++ b/_sass/base/_sprite-config.scss
@@ -11,5 +11,5 @@ $S-glyph-beta-y: 	-54px;
 $S-glyph-delta-x: 89px;
 $S-glyph-delta-y: -115px;
 
-$S-glyph-intro-x: 89px;
+$S-glyph-intro-x: 0;
 $S-glyph-intro-y: -187px;
