Reworked feature grid banners to cater for mobile

--- a/_includes/modules/home/feature-grid.html
+++ b/_includes/modules/home/feature-grid.html
@@ -6,7 +6,11 @@
       <figure class="effect-romeo">
         <img src="/images/placeholder/suits_480_360.jpg" />
         <figcaption>
-          <h2 class="banner">Suits</h2>
+          <div class="banner">
+            <div class="banner__text-container">
+              <h2 class="banner__text">Suits</h2>
+            </div>
+          </div>    
           <a href="#">View more</a>
         </figcaption>     
       </figure>
@@ -22,7 +26,11 @@
       <figure class="effect-romeo">
         <img src="/images/placeholder/belts_480_360.jpg" />
         <figcaption>
-          <h2 class="banner">Belts</h2>
+          <div class="banner">
+            <div class="banner__text-container">
+              <h2 class="banner__text">Belts</h2>
+            </div>
+          </div> 
           <a href="#">View more</a>
         </figcaption>     
       </figure>
@@ -38,7 +46,11 @@
       <figure class="effect-romeo">
         <img src="/images/placeholder/supplements_480_360.jpg" />
         <figcaption>
-          <h2 class="banner">Supplements</h2>
+          <div class="banner">
+            <div class="banner__text-container">
+              <h2 class="banner__text">Supplements</h2>
+            </div>
+          </div> 
           <a href="#">View more</a>
         </figcaption>     
       </figure>
