--- a/_sass/base/_sprite-config.scss
+++ b/_sass/base/_sprite-config.scss
@@ -2,14 +2,14 @@
 $S-glyph: 				url(/images/sprites/sprite-glyph.png);
 $S-glyph-2x-size: 274px;
 
-$S-glyph-alpha-x: 171px;
-$S-glyph-alpha-y: 6px;
+$S-glyph-alpha-x: 0;
+$S-glyph-alpha-y: 0;
 
-$S-glyph-beta-x: 	171px;
-$S-glyph-beta-y: 	-54px;
+$S-glyph-beta-x: 	0;
+$S-glyph-beta-y: 	-59px;
 
-$S-glyph-delta-x: 89px;
-$S-glyph-delta-y: -115px;
+$S-glyph-delta-x: 0;
+$S-glyph-delta-y: -122px;
 
 $S-glyph-intro-x: 0;
 $S-glyph-intro-y: -187px;
