--- a/_sass/modules/home/feature-grid/_mobile.scss
+++ b/_sass/modules/home/feature-grid/_mobile.scss
@@ -12,7 +12,7 @@
 	}
 
 	&__panel--product, &__intro-header {
-		.banner {
+		.banner__text {
 			text-indent: 999px;
 			background-image: $S-glyph;
 			background-size: $S-glyph-2x-size;			
@@ -40,12 +40,25 @@
 				padding: 9px 0;
 				z-index: 100;
 			}
+			.banner__text-container {
+				height: 42px;
+				margin: 0 auto;
+			}
+			.banner__text {
+				height: 48px;
+				margin-bottom: 0;
+			}
 		}
 		
 		&--alpha {
 			background-color: $C-brand-mustard;
 			.banner {
 				background-color: $C-brand-mustard;
+			}
+			.banner__text-container {
+				width: 104px;
+			}
+			.banner__text {
 				background-position-x: $S-glyph-alpha-x;
 				background-position-y: $S-glyph-alpha-y;
 			}	
@@ -55,6 +68,11 @@
 			background-color: $C-brand-red;
 			.banner {
 				background-color: $C-brand-red;
+			}
+			.banner__text-container {
+				width: 105px;
+			}
+			.banner__text {
 				background-position-x: $S-glyph-beta-x;
 				background-position-y: $S-glyph-beta-y;
 			}
@@ -64,6 +82,11 @@
 			background-color: $C-brand-blue;
 			.banner {
 				background-color: $C-brand-blue;
+			}
+			.banner__text-container {
+				width: 263px;
+			}
+			.banner__text {
 				background-position-x: $S-glyph-delta-x;
 				background-position-y: $S-glyph-delta-y;
 			}
@@ -78,7 +101,7 @@
 		margin: 0 auto;
 		width: 273px;
 
-		.banner {
+		.banner__text {
 			background-position-x: $S-glyph-intro-x;
 			background-position-y: $S-glyph-intro-y;
 			height: 42px;
