Our products bg image fixed

--- a/_includes/modules/home/feature-grid.html
+++ b/_includes/modules/home/feature-grid.html
@@ -18,7 +18,11 @@
     
     <div class="col col-4 tablet-col-4 mobile-full feature-grid__panel feature-grid__panel--intro">
       <div class="feature-grid__intro-header">
-        <h3 class="banner">Our&nbsp;Products</h3>
+        <div class="banner">
+            <div class="banner__text-container">
+              <h2 class="banner__text">Our&nbsp;Products</h2>
+            </div>
+          </div> 
       </div>  
     </div>
     
@@ -39,7 +43,7 @@
   </div>
 
   <div class="row clear feature-grid__row">
-    <div class="col col-4 tablet-col-4 mobile-full feature-grid__panel">
+    <div class="col col-4 tablet-col-4 no-mobile feature-grid__panel">
       &nbsp;
     </div>
     <div class="col col-4 tablet-col-4 mobile-full hfx-item feature-grid__panel feature-grid__panel--product feature-grid__panel--delta">
@@ -55,7 +59,7 @@
         </figcaption>     
       </figure>
     </div>
-    <div class="col col-4 tablet-col-4 mobile-full feature-grid__panel">
+    <div class="col col-4 tablet-col-4 no-mobile feature-grid__panel">
       &nbsp;
     </div>
   </div>
