New home page init

--- a/_includes/base/footer-scripts.html
+++ b/_includes/base/footer-scripts.html
@@ -3,6 +3,7 @@
 <script src="js/libs/slidebars.min.js"></script>
 <script src="js/libs/svgicons-config.js"></script>
 <script src="js/libs/svgicons.js"></script>
+<script src="js/helper.js"></script>
 
 <script>
 	(function() {
