--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,9 @@
 
   <body>
 
-    {% include navigation/primary-nav.html %}
+<!--     {% include navigation/primary-nav.html %} -->
 
 		<div id="sb-site">
-			{% include header.html %}
       {{ content }}
 		</div>
 
