--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,14 @@
 <head>
+
+  <meta name="robots" content="noindex">
+
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  
   <title>Hajime Hiro</title>
 
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <link rel="shortcut icon" href="/images/favicon.png">
   <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-touch-icon.png">
