--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header id="header" class="header">
   <div class="row clear">
 	  <div class="col col-12 tablet-full mobile-full">
 			
