--- a/_includes/modules/home/hero-banner.html
+++ b/_includes/modules/home/hero-banner.html
@@ -5,11 +5,7 @@
 				<h1 class="hero-banner__logo">Hajime Hero</h1>
 		</div>
 		<h2 class="hero-banner__tagline">A Martial Arts Store</h2>
-		<a href="#page" class="hero-banner__arrow arrow-down"></a>
+		<a href="#header" class="hero-banner__arrow arrow-down"></a>
 	</div>
 		
-</div>
-
-<div id="page" style="height:800px;">
-	<p>some content here</p>
 </div>
