--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -9,6 +9,8 @@ $C-brand-blue:		#7AA1C8;
 // Layout
 $L-gutter-width:	50px;
 
+$hero-banner-height: 500px;
+
 // Font Sizes
 $FS-beech-a:				20px;
 $FS-beech-b:				28px;
