--- a/_sass/modules/primary-nav-bar/_tablet.scss
+++ b/_sass/modules/primary-nav-bar/_tablet.scss
@@ -5,8 +5,9 @@
 .primary-nav {
 	
 	position: absolute;
+	top: $hero-banner-height;
 	right: $L-gutter-width;
-	padding-top: 25px;
+	padding: 25px 0;
 
 	&__item {
 		float: left;
