--- a/_includes/navigation/primary-nav.html
+++ b/_includes/navigation/primary-nav.html
@@ -1,6 +1,6 @@
 <div class="sb-slidebar sb-right">
-	<nav class="primary-nav">
-		<ul>
+	<nav id="primary-nav" class="primary-nav">
+		<ul class="primary-nav__list">
 			  <li class="primary-nav__item"><a href="index.html">Shop</a></li>
 			  <li class="primary-nav__item"><a href="/about/">Blog</a></li>
 			  <li class="primary-nav__item primary-nav__item--last"><a href="/blog/">Contact</a></li>
