--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
 
-<!--     {% include navigation/primary-nav.html %} -->
+    {% include navigation/primary-nav.html %}
 
 		<div id="sb-site">
       {{ content }}
