Added temp links to home categories

--- a/_includes/modules/home/shop-category-panel.html
+++ b/_includes/modules/home/shop-category-panel.html
@@ -11,7 +11,7 @@
               <h2 class="banner__text">Suits</h2>
             </div>
           </div>    
-          <a href="#">View more</a>
+          <a href="https://hajime-hiro-2.myshopify.com/collections/gi/">View more</a>
         </figcaption>     
       </figure>
     </div>
@@ -25,7 +25,7 @@
               <h2 class="banner__text">Supplements</h2>
             </div>
           </div> 
-          <a href="#">View more</a>
+          <a href="https://hajime-hiro-2.myshopify.com/collections/lifestyle/">View more</a>
         </figcaption>     
       </figure>
     </div>
@@ -39,7 +39,7 @@
               <h2 class="banner__text">Belts</h2>
             </div>
           </div> 
-          <a href="#">View more</a>
+          <a href="https://hajime-hiro-2.myshopify.com/collections/equipment/">View more</a>
         </figcaption>     
       </figure>
     </div>
